--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-    <h1>
+<body style="background-color: powderblue;">
+    <h1 style="color: red;text-align: center;">
         Github demo
     </h1>
+</body>
 </html>
